# StadiumIQ

./: .env.example  .gitignore  .gitleaks.toml  ACCESSIBILITY_COMPLIANCE_REPORT.md  CODE_QUALITY_STANDARDS.md  DESIGN.md  Dockerfile  PERFORMANCE_REPORT.md  README.md  SECURITY.md  SECURITY_ARCHITECTURE.md  TESTING_STRATEGY.md  docker-compose.yml  render.yaml  tree.txt  vercel.json
backend/: Dockerfile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  auth.py  config.py  logging.py  rate_limit.py  security.py
backend/app/data/: __init__.py  transit.py  venue_graph.py
backend/app/engine/: __init__.py  accessibility.py  calculator.py  crowd.py  emergency.py  evacuation.py  grading.py  navigation.py  prediction.py  sources.py  sustainability.py  transport.py  venues.py  volunteer.py
backend/app/models/: __init__.py  prediction_schemas.py  schemas.py  volunteer_schemas.py
backend/app/routes/: __init__.py  analyze.py  auth.py  emergency.py  fan_assist.py  health.py  main.py  navigation.py  prediction.py  transport.py  (+1 more)
backend/tests/: __init__.py  conftest.py  test_accessibility.py  test_ai_service.py  test_auth.py  test_cookie_auth.py  test_crowd.py  test_emergency.py  test_engine.py  test_engine_prediction.py  test_engine_volunteer.py  test_evacuation.py  test_grading.py  test_grading_failure_paths.py  test_health.py  test_main.py  test_missing_routes.py  test_navigation.py  test_rate_limits.py  test_routes.py  test_supabase_client.py  test_sustainability.py  test_transport.py
(+100 files in other folders)
